vova-apps/templates/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /factory(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: factory-service
              port:
                number: 80
        - path: /(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: jellyfin
              port:
                number: 8096
